--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Felicidades, las imagenes se han actualizado.</p>
   </div>
   <main id="app">
-    <h1>Selecciona la imagen que mas te guste</h1>
+    <h1>Selecciona la imagen que más te guste</h1>
     <div class="container">
       <img id="img-1" alt="dogs" name="" class="images" />
 
